--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -19,7 +19,8 @@ header.header
                                 label found something interesting
                                 .input-search--wrap
                                     input#input-search(type="search", name="search", placeholder="there are many ways you could know what we do")
-                                    button.btn-search
+                                    a(href="search-result.html") 
+                                        button.btn-search
 
                             h1 are you seeking for something special?
 
