--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,7 +23,9 @@ block content
                     img.img-fluid(src='img/layout6.jpg' alt)
 
                 .hero--wrap--hover
-                    h3 SUSTAINABILITY
+                    a(href="projects.html") 
+                        h3 SUSTAINABILITY
+
                     a(href="project-home.html") 
                         .hero--wrap--hover--project
                             h6 PROJECT
@@ -126,8 +128,6 @@ block content
 
                             h4 Typology 
                                 .btnHoverGridInt
-
-
 
                     .col-lg-4.col-12
                         .projects-grid--wrap
