--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -1,6 +1,6 @@
 extends includes/head.pug
 block head-page
-    title Linked | Projects
+    title Linked | Search Result
     script(src="js/animaciones-projects.min.js" defer)
     script(src="js/nav.min.js" defer)
 
@@ -10,7 +10,8 @@ block content
 
     main.home
         section.projects-home.projects-grid
-            h1.text-center PROJECTS
+            h1.text-center RESULT: 
+                span CONTRAST
             .container-fluid
                 .row
                     - var n = 0;
