--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,8 +1,12 @@
 extends includes/head.pug
 block head-page
     title Linked | About
+
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css' defer)
+    script(src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer)
     script(src="js/nav.min.js" defer)
     script(src="js/animaciones-about.min.js" defer)
+
 
 
 block content
@@ -12,17 +16,56 @@ block content
     main.about
         section 
             .container-fluid 
-                .row 
-                    .offset-lg-1.col-lg-5.about--image 
-                        picture 
-                            source(srcset="img/about.webp", type="image/webp")
-                            img.img-fluid(src="img/about.jpg", alt="")
+                .swiper.slider-about
+                    .swiper-wrapper
+                        .swiper-slide
+                            .row
+                                .offset-lg-1.col-lg-5.about--image 
+                                    picture 
+                                        source(srcset="img/about.webp", type="image/webp")
+                                        img.img-fluid(src="img/about.jpg", alt="")
 
-                    .col-lg-5.about--info
-                        h1
-                            sup Matei Denes
-                            | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
+                                .col-lg-5.about--info
+                                    h1
+                                        sup Matei Denes
+                                        | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
+
+                        //- .swiper-slide
+                        //-     .row
+                        //-         .offset-lg-1.col-lg-5.about--image 
+                        //-             picture 
+                        //-                 source(srcset="img/about.webp", type="image/webp")
+                        //-                 img.img-fluid(src="img/about.jpg", alt="")
+
+                        //-         .col-lg-5.about--info
+                        //-             h1
+                        //-                 sup Matei Denes
+                        //-                 | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
 
 
+                    .swiper-pagination
 
-    include includes/footer-full.pug
+                    .swiper-navigation
+                        .swiper-button-prev
+                        .swiper-button-next
+
+        section.about--footer 
+            .container-fluid.p-0
+                .row.about--footer--row
+                    .col-12.about--footer--info
+                        .about--footer--legales
+                            h6 © Linked Space 2022
+                            a(href="#°", target="_blank", rel="noopener noreferrer") Terms of Service
+                            a(href="#°", target="_blank", rel="noopener noreferrer") Privacy Policy
+
+                        .about--footer--redes 
+                            a(href="#!", target="_blank", rel="noopener noreferrer") 
+                                img.ing-fluid(src="img/instagram-solid.svg", alt="")
+
+                            a(href="#!", target="_blank", rel="noopener noreferrer") 
+                                img.ing-fluid(src="img/icon-fb.svg", alt="")
+
+                            a(href="#!", target="_blank", rel="noopener noreferrer") 
+                                img.ing-fluid(src="img/icon-in.svg", alt="")
+
+    include includes/footer.pug
