--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -83,7 +83,7 @@ block content
                     li PROJECTS
                 a(href='about.html')
                     li ABOUT
-                a#li-connect(data-bs-toggle="modal", data-bs-target="#exampleModal")
+                a#li-connect(data-bs-toggle="modal" data-bs-target="#exampleModal")
                     li CONNECT
 
         section.cita-home
@@ -522,7 +522,7 @@ block content
 
                             h4 Typology
 
-                    .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--connect(data-bs-toggle="modal", data-bs-target="#exampleModal")
+                    .col-lg-4.col-12.projects-home__acceso.projects-home__acceso--connect(data-bs-toggle="modal" data-bs-target="#exampleModal")
                         a
                             h3 CONNECT
 
