fix: ajustes integracion 30 dic

--- a/src/pug/project-home.pug
+++ b/src/pug/project-home.pug
@@ -23,6 +23,15 @@ block content
                                         li Sustainable
                                         li Builded
                                         li Enviromental
+                                        li Sustainable
+                                        li Builded
+                                        li Enviromental
+                                        li Sustainable
+                                        li Builded
+                                        li Enviromental
+                                        li Sustainable
+                                        li Builded
+                                        li Enviromental
                                     h6.project__date 2015
                                     h6.project__country.
 
@@ -36,8 +45,6 @@ block content
                                     picture
                                         source(srcset='img/images1.jpg', type='image/webp')
                                         img.img-fluid(src='img/images1.jpg' alt)
-
-
 
                     .col-lg-5.grid__description
                         h3
@@ -57,6 +64,13 @@ block content
                                 li Sustainable
                                 li Builded
                                 li Enviromental
+                                li Sustainable
+                                li Builded
+                                li Enviromental
+                                li Sustainable
+                                li Builded
+                                li Enviromental
+
                             h6.project__date 2015
                             h6.project__country Romania
                             h6.project__location.
@@ -88,7 +102,6 @@ block content
                             picture
                                 source(srcset='img/images1.jpg', type='image/webp')
                                 img.img-fluid(src='img/images1.jpg' alt)
-
 
             .container-fluid#quotes-two
                 p.projects-home__quotes The long terms into environment. Improve the state and availability of desirable materials or conditions over.
