--- a/src/pug/writing.pug
+++ b/src/pug/writing.pug
@@ -22,7 +22,7 @@ block content
                                 p 
                                     sup ESSAY 
                                     span […] 
-                                    | I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and 
+                                    span.parrafo I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and 
                                     span […]
 
 
