--- a/src/pug/project-detail.pug
+++ b/src/pug/project-detail.pug
@@ -31,6 +31,10 @@ block content
                                 li Sustainable
                                 li Builded
                                 li Enviromental
+                                li Sustainable
+                                li Builded
+                                li Enviromental
+
                             h6.project__date 2015
                             h6.project__country Romania
                             h6.project__location.
@@ -134,102 +138,44 @@ block content
                                 .swiper-button-prev
                                 .swiper-button-next
 
-        section.related 
+        section.related.projects-home
             .container-fluid 
                 h5.text-center.mb-4.title-section related projects
 
                 .row 
-                    .col-lg-4
-                        a(href='project-home.html')
-                            .projects-home__card.d-flex.tipo-uno(categoria='Typology')
-                                .projects-home__card__images
-                                    .projects-home__card__images__img(titulo='Worl Trade Center')
-                                        img.img-fluid(src='img/images1.jpg' alt)
-                                    .projects-home__card__images__img(titulo='Transparencias')
-                                        img.img-fluid(src='img/images1.jpg' alt)
-                                    .projects-home__card__images__img(titulo='Agricultura')
-                                        img.img-fluid(src='img/images1.jpg' alt)
-                                h3.projects-home__card__title.
+                    - var n = 0;
+                    while n < 3
+                        - ++n
+                        .col-lg-4.col-12
+                            .projects-grid--wrap
+                                .projects-home__card__images__img(titulo='Worl Trade Center')
+                                    img.img-fluid(src='img/images1.jpg' alt)
 
-                                    Typology
+                                .projects-home__card__images__img
+                                    img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__hover
-                                    h5 PROJECTS
-                                    .projects-home__card__hover__projects
-                                        h5.projects-home__card__hover__title.
+                                .projects-home__card__images__img
+                                    img.img-fluid(src='img/images1.jpg' alt)
 
-                                            Worl Trade Center
+                            h3.projects-home__card__title 
+                                | Typology 
+                                .btnHoverGrid
 
-                                        h5.projects-home__card__hover__title.
+                            .projects-home__card__hover__projects
+                                h5.title-categoria PROJECTS
 
-                                            Transparencias
+                                .projects-home__card__hover__projects__links
+                                    a(href="project-home.html")
+                                        h5.projects-home__card__hover__title Worl Trade Center
 
-                                        h5.projects-home__card__hover__title.
+                                    a(href="project-home.html")
+                                        h5.projects-home__card__hover__title Transparencias
 
-                                            Agricultura
+                                    a(href="project-home.html") 
+                                        h5.projects-home__card__hover__title Agricultura
 
-                                    h4 Typology
+                                h4 Typology 
+                                    .btnHoverGridInt
 
-                    .col-lg-4
-                        a(href="project-home.html")
-                            .projects-home__card.d-flex.tipo-dos(categoria='Contrast')
-                                .projects-home__card__images
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout4.jpg' alt)
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout5.jpg' alt)
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout6.jpg' alt)
-                                h3.projects-home__card__title.
-
-                                    Contrast
-
-                                .projects-home__card__hover
-                                    h5 PROJECTS
-                                    .projects-home__card__hover__projects
-                                        h5.projects-home__card__hover__title.
-
-                                            Worl Trade Center
-
-                                        h5.projects-home__card__hover__title.
-
-                                            Transparencias
-
-                                        h5.projects-home__card__hover__title.
-
-                                            Agricultura
-
-                                    h4 Contrast
-
-                    .col-lg-4
-                        a(href="project-home.html")
-                            .projects-home__card.d-flex.tipo-uno(categoria='Terrain')
-                                .projects-home__card__images
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout.jpg' alt)
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout2.jpg' alt)
-                                    .projects-home__card__images__img
-                                        img.img-fluid(src='img/layout3.jpg' alt)
-                                h3.projects-home__card__title.
-
-                                    Terrain
-
-                                .projects-home__card__hover
-                                    h5 PROJECTS
-                                    .projects-home__card__hover__projects
-                                        h5.projects-home__card__hover__title.
-
-                                            Worl Trade Center
-
-                                        h5.projects-home__card__hover__title.
-
-                                            Transparencias
-
-                                        h5.projects-home__card__hover__title.
-
-                                            Agricultura
-
-                                    h4 Terrain
 
     include includes/footer.pug
