--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -15,9 +15,14 @@
 
             li {
                 font-size: var(--h5);
+
                 &::before {
                     content: "\2192";
                     margin-right: 0.5em;
+                }
+
+                &:nth-child(n + 6) {
+                    display: none;
                 }
             }
         }
@@ -67,43 +72,47 @@
 }
 
 .projects-home {
+    .row {
+        row-gap: 60px;
+    }
+
     &__card {
         margin-bottom: 3em;
         position: relative;
         overflow: hidden;
 
-        &.tipo-uno {
-            align-items: flex-end;
-
-            .projects-home__card__title {
-                margin: 0 0 0.5em 0;
-            }
-        }
-        &.tipo-dos {
-            align-items: flex-start;
-
-            .projects-home__card__title {
-                margin: 0.5em 0 0 0;
-            }
-        }
-
-        &.tipo-tres {
-            align-items: flex-start;
-            flex-direction: row-reverse;
-
-            .projects-home__card__title {
-                margin: 0.5em 0.3em 0 0;
-            }
-        }
-
-        &.tipo-cuatro {
-            align-items: flex-end;
-            flex-direction: row-reverse;
-
-            .projects-home__card__title {
-                margin: 0.5em 0.3em 0 0;
-            }
-        }
+        //        &.tipo-uno {
+        //            align-items: flex-end;
+        //
+        //            .projects-home__card__title {
+        //                margin: 0 0 0.5em 0;
+        //            }
+        //        }
+        //        &.tipo-dos {
+        //            align-items: flex-start;
+        //
+        //            .projects-home__card__title {
+        //                margin: 0.5em 0 0 0;
+        //            }
+        //        }
+        //
+        //        &.tipo-tres {
+        //            align-items: flex-start;
+        //            flex-direction: row-reverse;
+        //
+        //            .projects-home__card__title {
+        //                margin: 0.5em 0.3em 0 0;
+        //            }
+        //        }
+        //
+        //        &.tipo-cuatro {
+        //            align-items: flex-end;
+        //            flex-direction: row-reverse;
+        //
+        //            .projects-home__card__title {
+        //                margin: 0.5em 0.3em 0 0;
+        //            }
+        //        }
 
         @media (hover: hover) {
             &:hover {
@@ -115,9 +124,9 @@
         }
 
         &__images {
-            flex-basis: 90%;
+            //flex-basis: 90%;
             &__img {
-                height: 200px;
+                height: inherit;
                 width: 100%;
                 overflow: hidden;
                 margin: 0.2em 0;
@@ -131,6 +140,16 @@
             }
         }
 
+        // &__title {
+        //     flex-basis: 10%;
+        //     transform: rotateZ(180deg);
+        //     writing-mode: vertical-lr;
+        //     font-family: var(--secundaria-regular);
+        //     color: var(--gris);
+        //     text-transform: capitalize;
+        //     // margin: 0 0 0.5em 0;
+        // }
+
         &__title {
             flex-basis: 10%;
             transform: rotateZ(180deg);
@@ -138,12 +157,71 @@
             font-family: var(--secundaria-regular);
             color: var(--gris);
             text-transform: capitalize;
-            // margin: 0 0 0.5em 0;
+            margin: 0 0 0.5em 0;
         }
 
-        &__hover {
+        // &__hover {
+        //     position: absolute;
+        //     transform: rotateZ(180deg) translateX(-100%);
+        //     writing-mode: vertical-rl;
+        //     background: rgba($color: #000, $alpha: 0.8);
+        //     width: 100%;
+        //     height: 100%;
+        //     display: flex;
+        //     flex-direction: column;
+        //     justify-content: flex-end;
+        //     border-radius: 5px;
+        //     overflow: hidden;
+        //     opacity: 0;
+
+        //     transition: 0.3s ease-in-out all;
+
+        //     > h5 {
+        //         margin: 0;
+        //         color: #fff;
+        //         padding: 0.5em 0;
+        //     }
+
+        //     &__projects {
+        //         display: flex;
+        //         padding: 0.5em 0;
+        //         margin-left: 0.5em;
+        //     }
+
+        //     &__title {
+        //         margin: 0 0 0.5em 0;
+        //         color: #fff;
+
+        //         &::after {
+        //             content: "\2192";
+        //         }
+
+        //         &:last-child {
+        //             &::after {
+        //                 display: none;
+        //             }
+        //         }
+        //     }
+
+        //     h4 {
+        //         font-size: var(--h3);
+        //         color: #fff;
+        //         text-transform: capitalize;
+        //         background: var(--gris-dark);
+        //         margin: 0;
+        //         font-family: var(--secundaria-regular);
+        //         padding: 0.3em 0.5em;
+        //     }
+        // }
+
+        &__hover__projects {
+            display: flex;
+            padding: 0 !important;
             position: absolute;
+            top: 0;
+            left: 0;
             transform: rotateZ(180deg) translateX(-100%);
+            // transform: rotateZ(180deg) translateX(0%);
             writing-mode: vertical-rl;
             background: rgba($color: #000, $alpha: 0.8);
             width: 100%;
@@ -153,32 +231,21 @@
             justify-content: flex-end;
             border-radius: 5px;
             overflow: hidden;
-            opacity: 0;
-
+            opacity: 1;
             transition: 0.3s ease-in-out all;
 
-            > h5 {
-                margin: 0;
+            .title-categoria {
                 color: #fff;
-                padding: 0.5em 0;
+                margin: 0.5em 0 0 0.5em;
             }
 
-            &__projects {
+            &__links {
                 display: flex;
-                padding: 0.5em 0;
-                margin-left: 0.5em;
-            }
+                align-items: center;
+                margin: 0.5em 0 0 1em;
 
-            &__title {
-                margin: 0 0 0.5em 0;
-                color: #fff;
-
-                &::after {
-                    content: "\2192";
-                }
-
-                &:last-child {
-                    &::after {
+                a:last-child h5 {
+                    &::before {
                         display: none;
                     }
                 }
@@ -194,37 +261,220 @@
                 padding: 0.3em 0.5em;
             }
         }
+
+        &__hover__title {
+            margin: 0 0 0.5em 0;
+            color: #fff;
+            display: flex;
+            flex-direction: row-reverse;
+
+            &::before {
+                content: "\2192";
+                margin-top: 1em;
+            }
+        }
+    }
+
+    .col-lg-4[categoria="Home"] {
+        display: none !important;
+    }
+
+    .col-lg-4:not(.projects-home__acceso--projects) {
+        transition: 0.4s ease-in-out all;
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        cursor: pointer;
+
+        &:nth-child(2n) {
+            align-items: flex-start;
+
+            .projects-home__card__hover__projects {
+                direction: rtl;
+
+                .title-categoria {
+                    margin: 0.5em 0 0.5em 0.5em;
+                }
+            }
+
+            .projects-home__card__hover__projects__links {
+                margin: 0 0 0.1em 1em;
+            }
+
+            .projects-home__card__hover__title::before {
+                margin: 0 0 1em 0;
+                //transform: rotate(180deg);
+            }
+        }
+
+        &:nth-child(4n) {
+            flex-direction: row-reverse;
+
+            .projects-home__card__title {
+                margin: 0.5em 0.5em 0 0;
+            }
+
+            .projects-home__card__hover__projects {
+                flex-direction: column-reverse;
+
+                h4 {
+                    margin-left: 0.5em;
+                    order: 3;
+                }
+
+                .title-categoria {
+                    order: 2;
+                }
+            }
+        }
+
+        &:nth-child(5n) {
+            flex-direction: row-reverse;
+
+            .projects-home__card__title {
+                margin: 0.5em 0.5em 0 0;
+            }
+
+            .projects-home__card__hover__projects {
+                flex-direction: column-reverse;
+                h4 {
+                    margin-left: 0.5em;
+                    order: 3;
+                }
+
+                .title-categoria {
+                    order: 2;
+                }
+            }
+        }
+
+        @media (hover: hover) {
+            &:hover {
+                .projects-home__card__hover__projects {
+                    opacity: 1;
+                    transform: rotateZ(180deg) translateX(0);
+                }
+            }
+        }
+    }
+
+    .btnHoverGrid {
+        display: none;
     }
 }
 
 @media (max-width: 768px) {
     .projects-home {
+        .row {
+            row-gap: 30px;
+        }
+
         &__card {
-            margin-bottom: 1em;
-            align-items: flex-start !important;
+            // margin-bottom: 1em;
+            // align-items: flex-start !important;
+
             &__images {
                 flex-basis: auto;
                 width: 100%;
 
-                &__img {
-                    height: calc(50px + 10 * ((100vw - 360px) / 768));
-                }
+                // &__img {
+                //     height: calc(50px + 10 * ((100vw - 360px) / 768));
+                // }
             }
 
             &__hover {
                 &__projects {
-                    flex-direction: column;
+                    flex-direction: column !important;
+                    direction: ltr !important;
+                    width: 95%;
+                    transform: rotateZ(180deg) translateX(-140%);
+
+                    h4 {
+                        display: flex;
+                        align-items: center;
+                        order: 3 !important;
+                        margin-left: 0 !important;
+                    }
+
+                    .title-categoria {
+                        order: 0 !important;
+                    }
+
+                    &__links {
+                        flex-direction: column;
+                        align-items: flex-start;
+                        row-gap: 10px;
+                        margin: 0.5em 0 0 1em !important;
+                    }
+
+                    &.active {
+                        opacity: 1;
+                        transform: rotateZ(180deg) translateX(-8px);
+                    }
                 }
 
                 &__title {
-                    display: flex;
-                    align-items: center;
-
-                    &::after {
-                        margin-top: 5px;
+                    &::before {
+                        display: none;
                     }
                 }
             }
+
+            &__title {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-basis: 10%;
+                margin: 0 !important;
+            }
+        }
+
+        .btnHoverGrid,
+        .btnHoverGridInt {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            bottom: 20px;
+            background: var(--gris-dark);
+            right: 20px;
+            margin-top: 10px;
+            display: grid;
+            place-items: center;
+            color: #fff;
+            font-size: x-large;
+            will-change: auto;
+
+            &.active {
+                background: var(--gris);
+                z-index: 1;
+
+                &::after {
+                    content: "-";
+                }
+            }
+        }
+
+        .btnHoverGrid {
+            &::after {
+                content: "+";
+            }
+        }
+
+        .btnHoverGridInt {
+            border: 1px solid #fff;
+            font-size: revert;
+            &::after {
+                content: "-";
+            }
+        }
+
+        .col-lg-4:not(.projects-home__acceso--projects) {
+            flex-direction: row !important;
+            align-items: flex-end !important;
+        }
+
+        .projects-grid--wrap {
+            max-height: 200px;
         }
     }
 }
