--- a/src/scss/pages/_project-detail.scss
+++ b/src/scss/pages/_project-detail.scss
@@ -249,27 +249,28 @@
 
         .related {
             padding-bottom: 5em;
-            .projects-home {
-                padding: 3em 0;
-                &__acceso {
-                    margin-bottom: 1em;
-                    height: calc(160px + 10 * ((100vw - 360px) / 768));
-                }
 
-                &__card {
-                    margin-bottom: 1em;
-                    flex-direction: row !important;
+            // .projects-home {
+            //     padding: 3em 0;
+            //     &__acceso {
+            //         margin-bottom: 1em;
+            //         height: calc(160px + 10 * ((100vw - 360px) / 768));
+            //     }
 
-                    &__images {
-                        flex-basis: auto;
-                        width: 100%;
+            //     &__card {
+            //         margin-bottom: 1em;
+            //         flex-direction: row !important;
 
-                        &__img {
-                            height: calc(50px + 10 * ((100vw - 360px) / 768));
-                        }
-                    }
-                }
-            }
+            //         &__images {
+            //             flex-basis: auto;
+            //             width: 100%;
+
+            //             &__img {
+            //                 height: calc(50px + 10 * ((100vw - 360px) / 768));
+            //             }
+            //         }
+            //     }
+            // }
         }
     }
 }
