--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -1,6 +1,157 @@
-.projects-home {
-    padding: 5em 0;
+//.projects-home {
+//    padding: 5em 0;
+//
+//    h1 {
+//        font-size: var(--h5);
+//        color: var(--gris);
+//        font-family: var(--primaria-regular);
+//        margin-bottom: 5em;
+//    }
+//
+//    &__card {
+//        position: relative;
+//        overflow: hidden;
+//        margin-bottom: 0 !important;
+//
+////        &.tipo-uno {
+////            align-items: flex-end;
+////
+////            .projects-home__card__title {
+////                margin: 0 0 0.5em 0;
+////            }
+////        }
+////
+////        &.tipo-dos {
+////            align-items: flex-start;
+////
+////            .projects-home__card__title {
+////                margin: 0.5em 0 0 0;
+////            }
+////        }
+////
+////        &.tipo-tres {
+////            align-items: flex-start;
+////            flex-direction: row-reverse;
+////
+////            .projects-home__card__title {
+////                margin: 0.5em 0.3em 0 0;
+////            }
+////        }
+////
+////        &.tipo-cuatro {
+////            align-items: flex-end;
+////            flex-direction: row-reverse;
+////
+////            .projects-home__card__title {
+////                margin: 0.5em 0.3em 0 0;
+////            }
+////        }
+//
+//        &__images {
+//            //flex-basis: 90%;
+//
+//            &__img {
+//                height: 200px;
+//                width: 100%;
+//                overflow: hidden;
+//                margin: 0.2em 0;
+//                border-radius: 5px;
+//
+//                img {
+//                    width: 100%;
+//                    height: 100%;
+//                    object-fit: cover;
+//                }
+//            }
+//        }
+//
+//        &__hover__projects {
+//            display: flex;
+//            padding: 0 !important;
+//            position: absolute;
+//            top: 0;
+//            left: 0;
+//            transform: rotateZ(180deg) translateX(-100%);
+//            // transform: rotateZ(180deg) translateX(0%);
+//            writing-mode: vertical-rl;
+//            background: rgba($color: #000, $alpha: 0.8);
+//            width: 100%;
+//            height: 100%;
+//            display: flex;
+//            flex-direction: column;
+//            justify-content: flex-end;
+//            border-radius: 5px;
+//            overflow: hidden;
+//            opacity: 1;
+//            transition: 0.3s ease-in-out all;
+//
+//            .title-categoria {
+//                color: #fff;
+//                margin: 0.5em 0 0 0.5em;
+//            }
+//
+//            &__links {
+//                display: flex;
+//                align-items: center;
+//                margin: 0 0 0 1em;
+//
+//                .projects-home__card__hover__title {
+//                    margin: 0;
+//                    color: #fff;
+//                    padding: 0.5em 0;
+//
+//                    &::after {
+//                        content: "\2192";
+//                    }
+//
+//                    &:last-child {
+//                        &::after {
+//                            display: none;
+//                        }
+//                    }
+//                }
+//
+//                &__title {
+//                    margin: 0 0 0.5em 0;
+//                    color: #fff;
+//                }
+//            }
+//
+//            h4 {
+//                font-size: var(--h3);
+//                color: #fff;
+//                text-transform: capitalize;
+//                background: var(--gris-dark);
+//                margin: 0;
+//                font-family: var(--secundaria-regular);
+//                padding: 0.3em 0.5em;
+//            }
+//        }
+//    }
+//
+//    .col-lg-4:not(.projects-home__acceso--projects) {
+//        transition: 0.4s ease-in-out all;
+//        position: relative;
+//        overflow: hidden;
+//        display: flex;
+//        cursor: pointer;
+//    }
+//
+//    .btnHoverGrid {
+//        display: none;
+//    }
+//}
 
+.projects-home {
+    h1 {
+        font-size: var(--h5);
+        color: var(--gris);
+        font-family: var(--primaria-regular);
+        margin-bottom: 5em;
+    }
+}
+
+.projects-grid {
     h1 {
         font-size: var(--h5);
         color: var(--gris);
@@ -8,129 +159,6 @@
         margin-bottom: 5em;
     }
 
-    &__card {
-        position: relative;
-        overflow: hidden;
-        margin-bottom: 0 !important;
-
-        &.tipo-uno {
-            align-items: flex-end;
-
-            .projects-home__card__title {
-                margin: 0 0 0.5em 0;
-            }
-        }
-
-        &.tipo-dos {
-            align-items: flex-start;
-
-            .projects-home__card__title {
-                margin: 0.5em 0 0 0;
-            }
-        }
-
-        &.tipo-tres {
-            align-items: flex-start;
-            flex-direction: row-reverse;
-
-            .projects-home__card__title {
-                margin: 0.5em 0.3em 0 0;
-            }
-        }
-
-        &.tipo-cuatro {
-            align-items: flex-end;
-            flex-direction: row-reverse;
-
-            .projects-home__card__title {
-                margin: 0.5em 0.3em 0 0;
-            }
-        }
-
-        &__images {
-            flex-basis: 90%;
-
-            &__img {
-                height: 200px;
-                width: 100%;
-                overflow: hidden;
-                margin: 0.2em 0;
-                border-radius: 5px;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
-        }
-
-        &__hover__projects {
-            display: flex;
-            padding: 0 !important;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform: rotateZ(180deg) translateX(-100%);
-            // transform: rotateZ(180deg) translateX(0%);
-            writing-mode: vertical-rl;
-            background: rgba($color: #000, $alpha: 0.8);
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            border-radius: 5px;
-            overflow: hidden;
-            opacity: 1;
-            transition: 0.3s ease-in-out all;
-
-            .title-categoria {
-                color: #fff;
-                margin: 0.5em 0 0 0.5em;
-            }
-
-            &__links {
-                display: flex;
-                align-items: center;
-                margin: 0 0 0 1em;
-
-                .projects-home__card__hover__title {
-                    margin: 0;
-                    color: #fff;
-                    padding: 0.5em 0;
-
-                    &::after {
-                        content: "\2192";
-                    }
-
-                    &:last-child {
-                        &::after {
-                            display: none;
-                        }
-                    }
-                }
-
-                &__title {
-                    margin: 0 0 0.5em 0;
-                    color: #fff;
-                }
-            }
-
-            h4 {
-                font-size: var(--h3);
-                color: #fff;
-                text-transform: capitalize;
-                background: var(--gris-dark);
-                margin: 0;
-                font-family: var(--secundaria-regular);
-                padding: 0.3em 0.5em;
-            }
-        }
-    }
-}
-
-.projects-grid {
     .row {
         row-gap: 60px;
     }
@@ -166,6 +194,10 @@
 
     &--wrap {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        max-height: 600px;
     }
 
     .projects-home__card__title {
@@ -250,14 +282,14 @@
         }
     }
 
-    .projects-grid {
-        .row {
-            row-gap: 30px;
-        }
+    // .projects-grid {
+    //     .row {
+    //         row-gap: 30px;
+    //     }
 
-        .col-lg-4 {
-            align-items: flex-end !important;
-            flex-direction: row !important;
-        }
-    }
+    //     .col-lg-4 {
+    //         align-items: flex-end !important;
+    //         flex-direction: row !important;
+    //     }
+    // }
 }
