--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -13,4 +13,5 @@ body {
     @import "../pages/_writing-detail";
     @import "../pages/_about";
     @import "../pages/_connect";
+    @import "../pages/_legales";
 }
