--- a/src/pug/includes/footer-full.pug
+++ b/src/pug/includes/footer-full.pug
@@ -3,9 +3,9 @@ footer.footer
         .row.footer--row
             .col-lg-7.footer--info
                 .footer--legales
-                    h6 © Linked Space 2022
-                    a(href="#°", target="_blank", rel="noopener noreferrer") Terms of Service
-                    a(href="#°", target="_blank", rel="noopener noreferrer") Privacy Policy
+                    h6 © Linked Space 2023
+                    a(href="terms.html") Terms of Service
+                    a(href="privacy.html") Privacy Policy
 
                 .footer--redes 
                     a(href="#!", target="_blank", rel="noopener noreferrer") 
