--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -81,39 +81,6 @@
         position: relative;
         overflow: hidden;
 
-        //        &.tipo-uno {
-        //            align-items: flex-end;
-        //
-        //            .projects-home__card__title {
-        //                margin: 0 0 0.5em 0;
-        //            }
-        //        }
-        //        &.tipo-dos {
-        //            align-items: flex-start;
-        //
-        //            .projects-home__card__title {
-        //                margin: 0.5em 0 0 0;
-        //            }
-        //        }
-        //
-        //        &.tipo-tres {
-        //            align-items: flex-start;
-        //            flex-direction: row-reverse;
-        //
-        //            .projects-home__card__title {
-        //                margin: 0.5em 0.3em 0 0;
-        //            }
-        //        }
-        //
-        //        &.tipo-cuatro {
-        //            align-items: flex-end;
-        //            flex-direction: row-reverse;
-        //
-        //            .projects-home__card__title {
-        //                margin: 0.5em 0.3em 0 0;
-        //            }
-        //        }
-
         @media (hover: hover) {
             &:hover {
                 .projects-home__card__hover {
@@ -125,12 +92,29 @@
 
         &__images {
             //flex-basis: 90%;
+
             &__img {
                 height: inherit;
                 width: 100%;
                 overflow: hidden;
                 margin: 0.2em 0;
                 border-radius: 5px;
+
+                &:nth-child(1) {
+                    img {
+                        object-position: top;
+                    }
+                }
+                &:nth-child(2) {
+                    img {
+                        object-position: center;
+                    }
+                }
+                &:nth-child(3) {
+                    img {
+                        object-position: bottom;
+                    }
+                }
 
                 img {
                     width: 100%;
@@ -220,11 +204,11 @@
             position: absolute;
             top: 0;
             left: 0;
-            transform: rotateZ(180deg) translateX(-100%);
+            transform: rotateZ(180deg) translateX(-120%);
             // transform: rotateZ(180deg) translateX(0%);
             writing-mode: vertical-rl;
             background: rgba($color: #000, $alpha: 0.8);
-            width: 100%;
+            width: calc(97.9% - calc(var(--bs-gutter-x) * 0.5));
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -353,6 +337,7 @@
                 .projects-home__card__hover__projects {
                     opacity: 1;
                     transform: rotateZ(180deg) translateX(0);
+                    left: calc(var(--bs-gutter-x) * 0.5);
                 }
             }
         }
@@ -366,28 +351,27 @@
 @media (max-width: 768px) {
     .projects-home {
         .row {
-            row-gap: 30px;
+            row-gap: 20px !important;
         }
 
         &__card {
-            // margin-bottom: 1em;
-            // align-items: flex-start !important;
-
             &__images {
                 flex-basis: auto;
                 width: 100%;
 
-                // &__img {
-                //     height: calc(50px + 10 * ((100vw - 360px) / 768));
-                // }
+                &__img {
+                    margin: 0;
+                }
             }
 
             &__hover {
                 &__projects {
                     flex-direction: column !important;
                     direction: ltr !important;
-                    width: 95%;
+                    width: 94%;
                     transform: rotateZ(180deg) translateX(-140%);
+                    right: 0;
+                    margin: auto;
 
                     h4 {
                         display: flex;
@@ -409,7 +393,7 @@
 
                     &.active {
                         opacity: 1;
-                        transform: rotateZ(180deg) translateX(-8px);
+                        transform: rotateZ(180deg) translateX(0px);
                     }
                 }
 
@@ -474,7 +458,8 @@
         }
 
         .projects-grid--wrap {
-            max-height: 200px;
+            max-height: 220px;
+            gap: 3px;
         }
     }
 }
