--- a/src/scss/pages/_project-detail.scss
+++ b/src/scss/pages/_project-detail.scss
@@ -169,29 +169,88 @@
     flex-direction: column;
 
     .lb-outerContainer {
-        min-height: 700px;
-        min-width: 700px;
+        // min-height: 700px;
+        // min-width: 700px;
+        width: 95vw !important;
+        height: 100vh !important;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        background: transparent;
+    }
+
+    .lb-container {
         display: flex;
         align-items: center;
         justify-content: center;
-        background: transparent;
+        width: 90%;
+        margin: auto;
     }
 
     .lb-image {
         background-origin: border-box;
         background-clip: border-box;
+        width: auto !important;
+        height: 90vh !important;
+        border: 0;
+        max-width: 100% !important;
     }
 
     .lb-details {
         display: none;
     }
+
+    .lb-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        a {
+            border: 1px solid var(--gris-claro);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: url(../img/icon-arrow.svg) no-repeat center / 12px;
+
+            &.lb-prev {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    .lb-data .lb-close {
+        background: url(../img/icon-close-white.png) no-repeat center / cover;
+        opacity: 1;
+        width: 40px;
+        height: 40px;
+    }
 }
 
 @media (max-width: 768px) {
     .lightbox {
+        .lb-nav a {
+            width: 30px;
+            height: 30px;
+            background-size: 9px;
+        }
+
+        .lb-close {
+            width: 30px !important;
+            height: 30px !important;
+            top: 50px;
+        }
+
+        .lb-container {
+            width: 75%;
+        }
+
         .lb-outerContainer {
-            min-height: calc(700px + 60 * ((100vw - 768px) / 360));
-            min-width: calc(700px + 300 * ((100vw - 768px) / 360));
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .lb-image {
+            height: auto !important;
         }
     }
 
@@ -249,28 +308,6 @@
 
         .related {
             padding-bottom: 5em;
-
-            // .projects-home {
-            //     padding: 3em 0;
-            //     &__acceso {
-            //         margin-bottom: 1em;
-            //         height: calc(160px + 10 * ((100vw - 360px) / 768));
-            //     }
-
-            //     &__card {
-            //         margin-bottom: 1em;
-            //         flex-direction: row !important;
-
-            //         &__images {
-            //             flex-basis: auto;
-            //             width: 100%;
-
-            //             &__img {
-            //                 height: calc(50px + 10 * ((100vw - 360px) / 768));
-            //             }
-            //         }
-            //     }
-            // }
         }
     }
 }
